public/styles/style.css
* {
  padding: 0;
  margin: 0;
}

a:hover {

  color: #e63946
}

a:visited {

  color: inherit;
}
  
:root {
  /*
	font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
  line-height: 1.5;
  font-weight: 400;
	*/
  
  color-scheme: light dark;
  color: rgba(255, 255, 255, 0.87);
  background-color: #0c1b33;
  
  font-synthesis: none;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;

  --racing-red: #df2935;
  --lite-red: #e63946;
  --logo-red: #F70020;
  --logo-dark: #00142B;
  --logo-blue: #00B2C6;
  --logo-yellow: #F7B000;
}

.rlgrad {

  background-image: linear-gradient(to right, var(--logo-blue), var(--logo-dark), var(--logo-dark), var(--logo-dark), var(--logo-red));
}

.lrgrad {

  background-image: linear-gradient(to left, var(--logo-blue), var(--logo-dark), var(--logo-dark), var(--logo-dark), var(--logo-red));
}

.fira-sans {

	font-family: "Fira Sans", sans-serif;
	font-weight: 400;
	font-style: normal;
}

.racing-sans {

	font-family: "Racing Sans One", sans-serif;
	font-weight: 400;
	font-style: normal;
}

#stream-container {
  background-color: green;
  z-index: 0;
  display: none;
}

#stream-overlay{
  position: absolute;
  right:50%;
  top: 50%;
}

/* #stream-overlay-menu {

  position: absolute;

  background-color: white;
  display: flex;
  flex-direction: column;
}

#stream-overlay-menu button {

  position: relative;
  width: 5vw;
  height: 5vh;
  margin-top: 1vh;
} */
  
#stream-overlay {
  
  position: absolute;
  left: 0;
  right: 0;
  margin-inline: auto;
  
  width: 100%;
  height: 100%;
  
  z-index: 98;
  background-color: aliceblue;
  
  opacity: 0%;
  
  pointer-events: none;
}
  
#stream-overlay p {
  
  position: relative;
  
  top: 5%;
  text-align: center;
  
  
  color: #242424;
}

#stream {

  width: 100vw;
  height: 100vh;
}

body {
  /* overflow: hidden; */
}
  
iframe {
  
  position: absolute;
  left: 0;
  right: 0;
  margin-inline: auto;
  
  width: 100vw;
  height: 100vh;
}
  
button {
  
  position: absolute;
    
  left: 5%;
  top: 20%;
  
  z-index: 99;
}
  
#navbar-container {

  background-color: #000411;

	display: flex;

	flex-direction: row;

	align-items: center;
}

#navbar-container a:hover {

  color: var(--racing-red)
}


#navbar-icon {

	width: 4vw;

	background-image: url(../assets/Remote_Racer_Icon.svg);
	background-size: cover;

	height: 0;

	padding-bottom: 4vw;
}

#navbar-home a {

	display: flex;

	flex-direction: row;

	align-items: center;

	text-decoration: none;
}

#navbar-home a:hover {

  color: var(--racing-red);
	text-decoration: underline;
}

#navbar-home h1 {

	padding-left: 0.5vw;

	text-wrap: nowrap;
}

#navbar-button-menu {

  display: flex;
  flex-direction: row;

	margin-left: auto;
}

.navbar-buttons {

  font-size: larger;

	text-decoration: none;

  padding: 1vh 1vw;

  margin-right: 1vw;
}

.navbar-buttons:hover {

  text-decoration: overline;
}

#navbar-spacer {

  width: 6vw;
}

.deactivated {

  display: none;
  pointer-events: none;
}

footer {
  position: fixed;
  left: 0;
  bottom: 0;
  width: 100%;
  text-align: center;
}

footer a:hover {

  color: var(--racing-red);
}

@media only screen and (max-width: 800px) {

	#navbar-icon {

		width: 10vh;

		padding-bottom: 10vh;
	}

	#navbar-home h1 {

		padding-left: 2vw;
	
		text-wrap: nowrap;
	}

	#navbar-button-menu {

		display: flex;

		flex-direction: column;
	}

	#navbar-button-menu a {

		margin-top: 1vh;
		margin-right: 2vw;
	}
}


#login-form {

  position: relative;

  width: 10vw;

  min-width: 160px;

  display: flex;

  flex-direction: column;

  background-color: #3772ff;

  color: white;

  border-radius: 5%;

  background-image: linear-gradient(to left, var(--logo-blue), var(--logo-dark), var(--logo-dark), var(--logo-dark), var(--logo-red));
}

#login-form label {

  margin-left: 5%;
  margin-right: 5%;
  margin-top: 2%;
}

#login-form input {

  margin-bottom: 5%;
  margin: 2% 5% 5% 5%;
}

#login-form input[type="submit"] {
  background-color: #007bff;                  /* Button color */
  color: white;                               /* Text color */
  padding: 8px 16px;                          /* Padding */
  border: none;                               /* Remove default border */
  border-radius: 4px;                         /* Rounded corners */
  cursor: pointer;                            /* Pointer on hover */
  margin-left: 20%;
  margin-right: 20%;
  font-family: "Racing Sans One", sans-serif;
}



/* Control Canvas */

#control-canvas {
  position: absolute;
  width: 100%;
  margin-top: 0;
}

/* Home Page Styling */

#home-about-section {

  background-color: aquamarine;

  display: flex;
  flex-direction: column;

  text-align: center;

  border-radius: 5vh 0vh;

  margin: 0 10vw;
  padding: 2vh 10vw;
}

.home-section {

  display: flex;
  flex-direction: column;

  text-align: center;

  margin: 0 10vw;
  padding: 1vh 1vw 1vh;
}

.home-section-l {

  border-radius: 5vh 0vh;
}

.home-section-r {

  border-radius: 0vh 5vh;
}

.home-section-inner {

  background-color: var(--logo-dark);

  display: flex;
  flex-direction: column;

  text-align: center;

  padding: 2vh 10vw;
}

.home-section-inner-l {

  border-radius: 5vh 0vh;
}

.home-section-inner-r {

  border-radius: 0vh 5vh;
}

#home-inspiration-section {

  display: flex;
  flex-direction: column;

  text-align: center;

  border-radius: 0vh 5vh;

  margin: 0 10vw;
  padding: 1vh 1vw 1vh;
}

#home-inspiration-section-inner {

  background-color: var(--logo-dark);
}

#home-resources-section {

  background-color: burlywood;
  display: flex;
  flex-direction: column;

  text-align: center;

  border-radius: 5vh 0vh;

  margin: 0 10vw;
  padding: 2vh 10vw;
}

#navbar-dropdown:hover .dropdown {
  display: block;
  position: absolute;
  overflow: hidden;
  min-width: 160px;
  max-width: 90vw;        /* Prevent the dropdown from exceeding the screen width */
  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
  z-index: 1;
}

.dropdown {
  display: none;
  background-color: #000411;
  min-width: 160px;
  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
  z-index: 1;
}

.login-dropdown:hover .dropdown {
  display: block;
  position: absolute;
}

@media only screen and (max-width: 800px) {
  #navbar-dropdown:hover .dropdown {
    max-width: 80vw;       /* Adjust width for smaller screens */
    right: 5vw;            /* Add space from the edge */
  }

  #navbar-home a {
    display:flex;
    flex-direction: column;
    align-items: center;
    text-decoration: none;
  }
  
}

#score-display {
  display: none;
  position: absolute;
  left: 50%;
  transform: translateX(-50%);
  background-color: rgba(0, 0, 0, 0.7);
  color: white;
  padding: 10px;
  border-radius: 5px;
  font-family: "Racing Sans One", sans-serif;
  z-index: 99;
}

#score-display p {
  margin: 0;
  font-size: 1.5em;
  text-align: center;
}

/* Help Button */
#help-container {
  position: relative;
  right: 10px;
  left: auto;
}

#help-button {
  position: absolute;
  top: 10px;
  padding: 8px 16px;
  background-color: #000000;
  color: white;
  border: none;
  border-radius: 5px;
  cursor: pointer;
  font-family: "Racing Sans One", sans-serif;
  font-size: 1em;
}

/* Modal Styling */
.modal {
  display: none;
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background-color: rgba(0, 0, 0, 0.5);
  z-index: 110;
}

.modal-content {
  position: relative;
  background-color: #fff;
  margin: 10% auto;
  padding: 20px;
  width: 80%;
  max-width: 600px;
  border-radius: 8px;
  font-family: "Racing Sans One", sans-serif;
  color: #333;
}

.modal-content ul{
  margin-left: 3%;
}

.close-button {
  position: absolute;
  top: 10px;
  right: 15px;
  font-size: 1.5em;
  color: #333;
  cursor: pointer;
}

#menus {
  position: absolute;
  margin-top: 80px;
}

#lobby-menu {
  margin-top: 45px;
  padding: 8px 16px;
  border: none;
  border-radius: 5px;
  font-family: "Racing Sans One", sans-serif;
  font-size: 1em;
}

#game-menu {
  display: none;
  padding: 8px 16px;
  border: none;
  border-radius: 5px;
  font-family: "Racing Sans One", sans-serif;
  font-size: 1em;
}

@media only screen and (max-width: 600px) {
  #help-button {
    top: 5px;
    padding: 6px 12px;
    font-size: 0.9em;
  }

  .modal-content {
    width: 90%;
    padding: 15px;
    font-size: 1em;
  }
  
}

#game-list{
  display: flex;
  list-style-type: none;
  flex-direction: row;
  flex-wrap: wrap;
}

.server-listing{
  padding: 10px;
  background-color:cornflowerblue;
  border-style: outset;
  border-color:royalblue;
  width: 250px;
}

.server-listing p{
  display: inline;
}

.server-listing a{
  display: inline;
  float: right;
}

#admin{
  margin-left: 55%;
    width: 40%;
  display: block;
  padding: 8px 16px;
}

#admin-panel{
  font-family: "Racing Sans One", sans-serif;
  font-size: 1em;
  width: 300px;
  padding: 10px;
  background-color:cornflowerblue;
  border-style: outset;
  border-color:royalblue;
}

#round-panel{
  background-color:rgb(65, 120, 222);
  border-style: outset;
  border-color:rgb(35, 82, 225);
}

#lobby-panel{
  background-color:rgb(65, 120, 222);
  border-style: outset;
  border-color:rgb(35, 82, 225);
}

.round-button{
  display: inline-block;
  text-align: center;
  width: 150px;
  background-color:rgb(35, 90, 193);
  border-style: outset;
  border-color:rgb(12, 50, 164);
}


.round-button {
  padding: 10px 15px;
  margin: 5px;
  background-color: #007BFF;
  color: white;
  text-decoration: none;
  border-radius: 5px;
  cursor: pointer;
  border: none;
}
.round-button:hover {
  background-color: #0056b3;
}

